--- a/src/pages/index/main.html
+++ b/src/pages/index/main.html
@@ -1,34 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>FIS3 demo</title>
-  <!--<link rel="stylesheet" type="text/css" href="./static/common.css">-->
-  <!--<link rel="stylesheet" type="text/css" href="./static/index.css">-->
-  <!--<link rel="stylesheet" type="text/css" href="./static/test.less">-->
-  <script type="text/javascript" src="/common/lib/mod.js"></script>
-
+    <link rel="import" href="/common/html/meta.html?__inline">
+    <title>FIS3 Better HTML Project</title>
 </head>
 <body>
-  <p>
-    Page Index<span>~</span>
-  </p>
-  <!--<script type="text/javascript" src="./static/index.js"></script>-->
-  <p> Hello, World. </p>
-  <button id="btn">load async js</button>
-  <script type="text/javascript">
-    require('./components/1-0/main.js');
+    <h2>1. 说明</h2>
+    <p>基于fi3构建的静态网页最佳实践</p>
 
-    var btn = document.getElementById('btn');
-    var handler = function() {
-      alert('handler');
-      require(['./components/2-0/main.js']);
-    };
+    <h2>2. 演示</h2>
+    <h3>2.1 按需加载</h3>
+    <p>fis3+mod.js，可以使用类似 CommonJS 规范的写法写代码，还可以按需加载js.</p>
+    <p><a href="mod.html">mod.html</a></p>
 
-    if (btn.addEventListener) {
-      btn.addEventListener('click', handler);
-    } else {
-      btn.attachEvent('onclick', handler);
-    }
-  </script>
+    <h3>2.2 打包</h3>
+    <p>按页面来自动打包</p>
 </body>
 </html>
