--- a/src/pages/mod/main.html
+++ b/src/pages/mod/main.html
@@ -2,18 +2,18 @@
 <html>
 <head>
     <link rel="import" href="/common/html/meta.html?__inline">
-    <title>mod</title>
+    <title>mod.js</title>
 </head>
 <body>
     <h2>说明</h2>
-    <p>本页面用于演示如何使用类似 Node.js 中的开发体验和按需加载。请打开 Console 控制台，查看其中的日志输出。</p>
+    <p><a href="https://github.com/fex-team/mod" target="_blank">modJS</a> 是一套的前端模块加载解决方案。请打开 Console 控制台，查看其中的日志输出。</p>
 
     <h2>测试</h2>
     <button id="btn">load async js</button>
 
     <script type="text/javascript" src="/common/lib/mod.js"></script>
     <script type="text/javascript">
-        require('./main');
+        require('./main').init();
     </script>
 </body>
 </html>
