--- a/src/pages/mod/main.html
+++ b/src/pages/mod/main.html
@@ -5,11 +5,13 @@
     <title>mod.js</title>
 </head>
 <body>
-    <h2>说明</h2>
-    <p><a href="https://github.com/fex-team/mod" target="_blank">modJS</a> 是一套的前端模块加载解决方案。请打开 Console 控制台，查看其中的日志输出。</p>
+    <div class="container">
+        <h2>说明</h2>
+        <p><a href="https://github.com/fex-team/mod" target="_blank">modJS</a> 是一套的前端模块加载解决方案。请打开 Console 控制台，查看其中的日志输出。</p>
 
-    <h2>测试</h2>
-    <button id="btn">load async js</button>
+        <h2>测试</h2>
+        <button id="btn">load async js</button>
+    </div>
 
     <script type="text/javascript" src="/common/lib/mod.js"></script>
     <script type="text/javascript">
