修改目录结构

--- a/src/pages/index/main.html
+++ b/src/pages/index/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="import" href="/common/html/meta.html?__inline">
+    <link rel="import" href="/modules/html_inline/meta.html?__inline">
     <title>FIS3 Better HTML Project</title>
 </head>
 <body>
