--- a/src/pages/mod/main.html
+++ b/src/pages/mod/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="import" href="/common/html/meta.html?__inline">
+    <link rel="import" href="/modules/html_inline/meta.html?__inline">
     <title>mod.js</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
         <button id="btn">load async js</button>
     </div>
 
-    <script type="text/javascript" src="/common/lib/mod.js"></script>
+    <script type="text/javascript" src="/static/lib/mod.js"></script>
     <script type="text/javascript">
         require('./main').init();
     </script>
