移除冗余文件

--- a/src/modules/html_inline/meta.html
+++ b/src/modules/html_inline/meta.html
@@ -1,11 +1,5 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <meta name="format-detection" content="telephone=no">
-<meta name="keywords" content="个人直播,NOW直播,腾讯个人直播,QQ个人直播"/>
-<meta name="description" itemprop="description" content="正在直播, 快来围观!"/>
-<meta name="name" itemprop="name" content="NOW直播" />
-<meta name="image" itemprop="image" content="http://8.url.cn/now/h5/share/img/modules/logo.jpg" />
-<link rel="dns-prefetch" href="//8.url.com/">
-<link rel="dns-prefetch" href="//open.mobile.qq.com/">
-<link rel="dns-prefetch" href="//v.qq.com/">
-
+<meta name="keywords" content="keyword1,keyword2"/>
+<meta name="description" content="desc"/>
