--- a/src/pages/mod/main.html
+++ b/src/pages/mod/main.html
@@ -10,7 +10,7 @@
         <p><a href="https://github.com/fex-team/mod" target="_blank">modJS</a> 是一套的前端模块加载解决方案。请打开 Console 控制台，查看其中的日志输出。</p>
 
         <h2>测试</h2>
-        <button id="btn">load async js</button>
+        <button id="btn" class="btn btn-info">load async js</button>
     </div>
 
     <script type="text/javascript" src="/static/lib/mod.js"></script>
